src/components/Search.module.scss
.RuleSearch {
  padding: 0 40px 5px;
  @media (max-width: 768px) {
    padding: 0 25px 5px;
  }
}

.RuleSearchContainer {
  position: relative;
  height: 40px;
  @media (max-width: 768px) {
    height: 30px;
  }
}

.inputWrapper {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  width: 100%;
}

.input {
  -webkit-appearance: none;
  background-color: var(--color-input-bg);
  background-image: none;
  border-radius: 20px;
  border: 1px solid var(--color-input-border);
  box-sizing: border-box;
  color: #c1c1c1;
  display: inline-block;
  font-size: inherit;
  height: 40px;
  outline: none;
  padding: 0 15px 0 35px;
  transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
  width: 100%;
}

.iconWrapper {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 10px;
}

